--- a/public/views/dondeestamos.html
+++ b/public/views/dondeestamos.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Donde Estamos</title>
 	<link rel="stylesheet" href="../css/globals.css" />
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script src="//maps.google.com/maps/api/js?sensor=true"></script>
 	<script src="../lib/jQuery/jquery.js"></script>
 	<script src="../lib/GMaps/gmaps.js"></script>
 	<link rel="stylesheet" href="../css/dondeestamos.css" />
