--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -1,3 +1,45 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?wga3l5');
+	src:url('fonts/icomoon.eot?wga3l5#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.ttf?wga3l5') format('truetype'),
+		url('fonts/icomoon.woff?wga3l5') format('woff'),
+		url('fonts/icomoon.svg?wga3l5#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+	font-family: 'icomoon' !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-cart:before {
+	content: "\e900";
+}
+.icon-facebook:before {
+	content: "\e901";
+}
+.icon-instagram:before {
+	content: "\e902";
+}
+.icon-twitter:before {
+	content: "\e903";
+}
+
+
+
+
 .image-responsive {
 	max-width: 100%;
 	display: inline-block;
