--- a/public/views/guatechapin.html
+++ b/public/views/guatechapin.html
@@ -107,6 +107,19 @@
 		</header>
 		<section id="about">
 			<article>
+				<h2>RESEÑA HISTORICA</h2>
+
+				<p>
+					Guatechapín nace de la idea de un grupo de estudiantes profesionales de la Maestría en Administración de Negocios de la Universidad Galileo con el objetivo de promover la venta de artesanía típica guatemalteca elaborada en su mayoría manualmente por los principales artesanos de nuestro país, garantizando así el cumplimiento en la producción, en la calidad, y en la comercialización justa de los productos. 
+				</p>
+				<p>
+					La artesanía Guatemalteca es la expresión más genuina de sus habitantes originales,  y gran soporte del sustento de las comunidades. Los artesanos dotados de una vocación al tejido y al bordado utilizan los más hermosos colores para el matizado y la producción de tejidos artesanales que van desde sus tradicionales cortes a una variadísima diversidad de artículos tales como: bolsos, sandalias, mochilas, artículos  de morcilla, ropa para dama, caballero y niños. Cuyo deseo es dar a conocer la cultura y belleza por medio de artesanías típicas hechos en Guatemala para todo el mundo.
+				</p>
+				<p>
+					El reconocimiento de la artesanía guatemalteca ha ido aumentando a nivel mundial, puesto que el mercado mundial lo ha recibido de buena manera. También los guatemaltecos, han tomado de base los diseños tradicionales para ir creando nuevas líneas de productos, adaptándose a las tendencias del mercado. Lo que ha logrado aumentar la potencia de este sector.
+				</p>
+			</article>
+			<article>
 				<h2>MISIÓN</h2>
 				<p>
 					En Guatechapín exportamos las mejores artesanías de Guatemala y contribuimos con el desarrollo del artesano y sus comunidades por medio de la comercialización de sus productos en mercados extranjeros.
@@ -148,24 +161,11 @@
 				</ul>
 			</article>
 			<article>
-				<h2>RESEÑA HISTORICA</h2>
-
-				<p>
-					Guatechapín nace de la idea de un grupo de estudiantes profesionales de la Maestría en Administración de Negocios de la Universidad Galileo con el objetivo de promover la venta de artesanía típica guatemalteca elaborada en su mayoría manualmente por los principales artesanos de nuestro país, garantizando así el cumplimiento en la producción, en la calidad, y en la comercialización justa de los productos. 
-				</p>
-				<p>
-					La artesanía Guatemalteca es la expresión más genuina de sus habitantes originales,  y gran soporte del sustento de las comunidades. Los artesanos dotados de una vocación al tejido y al bordado utilizan los más hermosos colores para el matizado y la producción de tejidos artesanales que van desde sus tradicionales cortes a una variadísima diversidad de artículos tales como: bolsos, sandalias, mochilas, artículos  de morcilla, ropa para dama, caballero y niños. Cuyo deseo es dar a conocer la cultura y belleza por medio de artesanías típicas hechos en Guatemala para todo el mundo.
-				</p>
-				<p>
-					El reconocimiento de la artesanía guatemalteca ha ido aumentando a nivel mundial, puesto que el mercado mundial lo ha recibido de buena manera. También los guatemaltecos, han tomado de base los diseños tradicionales para ir creando nuevas líneas de productos, adaptándose a las tendencias del mercado. Lo que ha logrado aumentar la potencia de este sector.
-				</p>
-			</article>
-			<article>
 				<h2>GRUPO GESTOR DEL PROYECTO</h2>
 				<figure>
 					<img src="../img/grupo gestor.jpg" class="image-responsive" alt="">
 					<figcaption>
-						<ul class="list-none">
+						<ul class="list-none" style="margin-top: 1em;">
 							<li>
 								Licda. Marcia Arévalo Mayen
 							</li>	
@@ -180,6 +180,19 @@
 							</li>
 							<li>
 								Ing. Juan Luis Gordillo
+							</li>
+							<li style="margin-top: 1em;">
+								<p>
+									Agradecimiento especial:
+								</p>
+								<p class="no-margin">
+									<strong>
+										Inga. Sandra Lucrecia Gómez
+									</strong>
+								</p>
+								<p class="no-margin">
+				    				Asesora de Proyectos
+								</p>
 							</li>
 						</ul>
 						
