--- a/public/views/contacto.html
+++ b/public/views/contacto.html
@@ -82,23 +82,17 @@
 					<ul class="no-margin no-padding list-none">
 						<li>
 							<a href="../index.html" class="no-underline">INICIO</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="guatechapin.html" class="no-underline">QUIÉNES SOMOS</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="colecciones.html" class="no-underline">PRODUCTOS</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="dondeestamos.html" class="no-underline">DÓNDE ESTAMOS</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="contacto.html" class="no-underline item-menu-selected">CONTACTO</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="mas.html" class="no-underline">MÁS</a>
-						</li>
-						<li id="container-mis-compras" class="hidden">
+						</li><li id="container-mis-compras" class="hidden">
 							<a href="compras.html" class="no-underline">MIS COMPRAS</a>
 						</li>
 					</ul>
