--- a/public/views/colecciones.html
+++ b/public/views/colecciones.html
@@ -100,7 +100,8 @@
 							<a href="contacto.html" class="no-underline">CONTACTO</a>
 						</li><li>
 							<a href="mas.html" class="no-underline">MÁS</a>
-						</li><li id="container-mis-compras" class="hidden">
+						</li>
+						<li id="container-mis-compras" class="hidden">
 							<a href="compras.html" class="no-underline">MIS COMPRAS</a>
 						</li>
 					</ul>
