--- a/public/views/guatechapin.html
+++ b/public/views/guatechapin.html
@@ -157,7 +157,7 @@
 			<article>
 				<h2>GRUPO GESTOR DEL PROYECTO</h2>
 				<figure>
-					<img src="../img/grupo gestor.jpg" class="image-responsive" alt="">
+					<img src="../img/grupo gestor.jpg" class="image-responsive" style="box-shadow:2px 2px 8px #A8A8A8; " alt="">
 					<figcaption>
 						<ul class="list-none" style="margin-top: 1em;">
 							<li>
