--- a/public/views/guatechapin.html
+++ b/public/views/guatechapin.html
@@ -189,10 +189,11 @@
 								</p>
 							</li>
 						</ul>
-						
 					</figcaption>
 				</figure>
-
+				<figure>
+					<img src="../img/galileo.jpg" class="image-responsive" style="padding: 1em; width: 60%;" alt="">
+				</figure>
 			</article>
 		</section>
 		<footer>
